# hamtaro

./: README.md  pyproject.toml
hamtaro/: cli.py  http.py  util.py
